# tuicam

./: Cargo.toml  README.md  flake.nix
src/: app.rs  channel.rs  event_handler.rs  frame_handler.rs  handler.rs  main.rs  video_capture_handler.rs
