[package]
name = "tui-cam"
version = "0.0.1"
edition = "2021"
description = "Terminal-based camera"
license = "MIT"
repository = "https://github.com/hlsxx/tukai"

[dependencies]
ratatui = "0.29.0"
tokio = { version = "1.41.0", features = ["full"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
opencv = "0.93.5"
